--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "commit": "cz"
   },
   "peerDependencies": {},
   "husky": {
@@ -50,6 +51,7 @@
     "@size-limit/preset-small-lib": "^8.1.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.0.27",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "react": "^18.2.0",
     "react-test-renderer": "^18.2.0",
@@ -64,5 +66,10 @@
     "hooks",
     "custom hooks",
     "alireza ghadyani"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
