--- a/package.json
+++ b/package.json
@@ -93,5 +93,9 @@
       "path": "dist/functional-react-hooks.esm.js",
       "limit": "10 KB"
     }
-  ]
+  ],
+  "dependencies": {
+    "@types/js-cookie": "^3.0.3",
+    "js-cookie": "^3.0.1"
+  }
 }
